# fastapi

./: .dockerignore  .gitignore  docker-compose.yml  docker-postgres.yml  docker-redis.yml  init.win  sonar-project.properties
source/: Dockerfile  main.py  pyproject.toml  requirements.txt
source/classes/: sys.py
source/routes/: api.py  doc.py
source/templates/: index.html
